--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             including ingredients and full instructions, to
             prepare it yourself.</p>
         <ul>
-            <li>Homemade Brad Stuffing</li>
+            <li>Homemade Bread Stuffing</li>
             <li>Homemade Lasagna</li>
             <li>Homemade Pizza Dough</li>
         </ul>
