Add links to each recipe pages

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             including ingredients and full instructions, to
             prepare it yourself.</p>
         <ul>
-            <li>Homemade Bread Stuffing</li>
-            <li>Homemade Lasagna</li>
-            <li>Homemade Pizza Dough</li>
+            <li><a href="./recipes/bread-stuffing.html">Homemade Bread Stuffing</a></li>
+            <li><a href="./recipes/lasagna.html">Homemade Lasagna</a></li>
+            <li><a href="./recipes/pizza-dough.html">Homemade Pizza Dough</a></li>
         </ul>
     </body>
 </html>
