--- a/recipes/bread-stuffing.html
+++ b/recipes/bread-stuffing.html
@@ -6,5 +6,18 @@
     </head>
     <body>
         <h1>Homemade Bread Stuffing</h1>
+        <p> This classic stuffing has been a family favorite for years, 
+            and we often double the recipe to feed a crowd.</p>
+        <p>This perfectly seasoned bread stuffing will be an easy-to-make 
+            and super flavorful addition to your holiday table. </p>
+        <h2>Bread Stuffing Ingredients</h2>
+        <p>You'll need the following ingredients to make this bread stuffing recipe.</p>
+        <ul>
+            <li><b>Butter</b>: This bread stuffing recipe starts with two sticks of butter.</li>
+            <li><b>Vegetables</b>: You'll need chopped celery with leaves and a chopped onion.</li>
+            <li><b>Bread</b>: Four and a half of chopped bread cubes should make about 8 servings.</li>
+            <li><b>Seasonings</b>: Season the bread stuffing with salt, dried sage, dried thyme,
+                poultry seasoning, and black pepper</li>
+        </ul>
     </body>
 </html>
