Lists quantities of ingredients needed

--- a/recipes/bread-stuffing.html
+++ b/recipes/bread-stuffing.html
@@ -19,5 +19,19 @@
             <li><b>Seasonings</b>: Season the bread stuffing with salt, dried sage, dried thyme,
                 poultry seasoning, and black pepper</li>
         </ul>
+        <h2>Ingredients</h2>
+        <P>Here are how many of these ingredients you need.</P>
+        <p><strong>??? The dish should be divided into 8 individuals</strong></p>
+        <ul>
+            <li>1/2 cup butter</li>
+            <li>3/4 cup chopped celery with leaves</li>
+            <li>3/8 cup chopped onion</li>
+            <li>4.5 cups soft bread cubes</li>
+            <li>1 teaspoon salt</li>
+            <li>1/2 teaspoon dried sage leaves</li>
+            <li>1/2 teaspoon dried thyme leaves</li>
+            <li>1/2 teaspoon poultry seasoning, or to taste</li>
+            <li>1/4 teaspoon ground black pepper</li>
+        </ul>
     </body>
 </html>
