Add overview of how to make and step by step instructions

--- a/recipes/bread-stuffing.html
+++ b/recipes/bread-stuffing.html
@@ -33,5 +33,28 @@
             <li>1/2 teaspoon poultry seasoning, or to taste</li>
             <li>1/4 teaspoon ground black pepper</li>
         </ul>
+        <h2>How to Make Bread Stuffing</h2>
+        <p>Here's a brief overview of what you can expect when
+            you make homemade bread stuffing:</p>
+        <ol>
+            <li>Sauté the vegetables in butter until the onion is soft.</li>
+            <li>Combine the remaining ingredients i a large bowl.</li>
+            <li>Stir the butter veggie mixture into the bread mixture.</li>
+            <li>Transfer the mixture to a casserole dish, cover with foil,
+                and bake until golden.</li>
+        </ol>
+        <h2>Directions</h2>
+        <p>Here's a step-by-step instructions:</p>
+        <p><b>Step 1</b>: Gather all ingredients</p>
+        <p><b>Step 2</b>: Preheat the oven to 350 degrees F (175 degrees C)</p>
+        <p><b>Step 3</b>: Melt butter in a large skillet over medium-high heat.
+            Cook celery and onion in butter until softened, 5 to 10 minutes.</p>
+        <p><b>Step 4</b>: Place bread cubes in a large bowl. Season with Salt,
+            sage, thyme, poultry seasoning, and black pepper.</p>
+        <p><b>Step 5</b>: Add cooked onion-celery mixture to bread cubes; stir.</p>
+        <p><b>Step 6</b>: Pour bread mixture into a large casserole dish; cover the dish with
+            aluminum foil.</p>
+        <p><b>Step 7</b>: Bake in the preheated oven until heated through and golden on top,
+            about 1 hour.</p> 
     </body>
 </html>
