Embed image of the final prepared dish

--- a/recipes/bread-stuffing.html
+++ b/recipes/bread-stuffing.html
@@ -10,6 +10,8 @@
             and we often double the recipe to feed a crowd.</p>
         <p>This perfectly seasoned bread stuffing will be an easy-to-make 
             and super flavorful addition to your holiday table. </p>
+        <img src="../images/bread-stuffing/bread-stuffing-final.webp" alt="prepared bread stuffing" width="500">
+
         <h2>Bread Stuffing Ingredients</h2>
         <p>You'll need the following ingredients to make this bread stuffing recipe.</p>
         <ul>
