Add a link back to home page

--- a/recipes/bread-stuffing.html
+++ b/recipes/bread-stuffing.html
@@ -5,6 +5,7 @@
         <title>Bread Stuffing Recipe</title>
     </head>
     <body>
+        <p><a href="../index.html"><b>HOME</b></a></p>
         <h1>Homemade Bread Stuffing</h1>
         <p> This classic stuffing has been a family favorite for years, 
             and we often double the recipe to feed a crowd.</p>
