Add a link to back to homepage for lasagna and pizza recipe pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,7 @@
         <title>Lasagna Recipe</title>
     </head>
     <body>
+        <p><a href="../index.html"><b>HOME</b></a></p>
         <h1>Homemade Lasagna</h1>
     </body>
 </html>
