--- a/recipes/pizza-dough.html
+++ b/recipes/pizza-dough.html
@@ -5,6 +5,7 @@
         <title>Pizza Dough Recipe</title>
     </head>
     <body>
+        <p><a href="../index.html"><b>HOME</b></a></p>
         <h1>Homemade Pizza Dough</h1>
     </body>
 </html>
