Add description with image

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,16 @@
     <body>
         <p><a href="../index.html"><b>HOME</b></a></p>
         <h1>Homemade Lasagna</h1>
+        <p>This is my mom's special homemade lasagna recipe with a meaty,
+            made from scratch tomato sauce and a deliciously
+            cheesy filling. A more traditional homemade lasagna
+            filling would be made with ricotta but my mom's recipe calls
+            for a blend of small-curd cottage cheese and Parmesan. I have
+            found none better anywhere. serve with a leaf green salad and
+            crusty garlic bread.</p>
+        <img src="../images/lasagna/lasagna-final.webp" alt="completed lasagna dish" width="500" height="500">
+        <small>Credit: Rita</small>
+
+        
     </body>
 </html>
