Add ingredients section

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,6 +17,52 @@
         <img src="../images/lasagna/lasagna-final.webp" alt="completed lasagna dish" width="500" height="500">
         <small>Credit: Rita</small>
 
+        <h2>Homemade Lasagn Ingredients</h2>
+        <p>You'll need the following ingredients to make this Lasagna:</p>
+        <ul>
+            <li><b>Meat</b>: This lasagna recipe starts with a pound of Meat
+            (1/2 pound ground pork, 1/2 pound lean ground beef).</li>
+            <li><b>Onion</b>: A diced onion is cooked until translucent with
+            the ground meat.</li>
+            <li><b>Canned tomatoes</b>: You'll need a can of tomato sauce and
+                a can of crushed tomatoes.</li>
+            <li><b>Fresh herbs</b>: For fresh flavor, chop two tablespoons of
+                parsley and crush one clove of garlic.</li>
+            <li><b>Sugar</b>: A dash of sugar balances out all of the acidity
+                from the tomatoes.</li>
+            <li><b>Spices and seasonings</b>: This homemade lasagna is seasoned
+                with dried basil, dried oregano, salt, and black pepper.</li>
+            <li><b>Noodles</b>: Of course, you'll need lasagna noodles! This
+                recipe calls for uncooked noodles, but you can use the oven-ready
+                variety to save time</li>
+            <li><b>Cheese</b>: The cheese layer is made up of cottage cheese and
+                Parmesan. You'll also need shredded mozzarella.</li>
+            <li><b>Eggs</b>: Eggs make the cheese layer extra creamy. Plus, they
+                act as a binding agent (which means they hold the layer together).</li>
+        </ul>
         
+        <h2>Ingredients</h2>
+        <p>Here are how many of these ingredients you need.</p>
+        <p><strong>??? The dish should be divided into 4 individuals!</strong></p>
+        <ul>
+            <li>1/4 pound ground pork</li>
+            <li>1/4 pound lean ground beef</li>
+            <li>1/4 cup minced onion</li>
+            <li>1/2(28 ounce) can crushed tomatoes</li>
+            <li>1/2 (8 ounce) can tomato sauce</li>
+            <li>2 tablespoon chopped fresh parsley, divided</li>
+            <li>1 clove garlic, crushed</li>
+            <li>3/2 teaspoons dried basil</li>
+            <li>3/2 teaspoons salt</li>
+            <li>1/2 teaspoon dried oregano</li>
+            <li>1/8 teaspoon white sugar</li>
+            <li>1 (16 ounce) package lasagna noodles</li>
+            <li>1 pound small-curd cottage cheese</li>
+            <li>3/4 cup grated Parmesan cheese</li>
+            <li>3 large eggs</li>
+            <li>2 teaspoons salt</li>
+            <li>1/4 teaspoon ground black pepper</li>
+            <li>1 (16 ounce) package shredded mozzarella cheese</li>
+        </ul>
     </body>
 </html>
